[package]
name = "pthreadbook-rs"
version = "0.1.0"
authors = ["Jonas Tepe <jonasprogrammer@gmail.com>"]

[[bin]]
name = "alarm"
path = "src/alarm.rs"

[[bin]]
name = "alarm_fork"
path = "src/alarm_fork.rs"

[[bin]]
name = "alarm_thread"
path = "src/alarm_thread.rs"

[[bin]]
name = "alarm_mutex"
path = "src/alarm_mutex.rs"

[[bin]]
name = "trylock"
path = "src/trylock.rs"

[[bin]]
name = "cond"
path = "src/cond.rs"

[dependencies]
libc = "0.2.11"

